objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Accounting_Comments__c</fullName>
        <label>Acctg Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccruedUnApprovedExpenseTotal__c</fullName>
        <label>Accruing/Unpaid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acctg_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box to complete this item and clear any remaining amounts, if amount recognized does not match the order amount.</inlineHelpText>
        <label>Acctg Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Year_2__c</fullName>
        <inlineHelpText>Price Year 2 from the sales order</inlineHelpText>
        <label>Ext Amt Yr 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Year_3__c</fullName>
        <inlineHelpText>Price Year 3 from Sales Order</inlineHelpText>
        <label>Ext Amt Yr 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Year_4__c</fullName>
        <inlineHelpText>Price Year 4 from the sales order</inlineHelpText>
        <label>Ext Amt Yr 4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_000000__c</fullName>
        <displayFormat>Asset-{000000}</displayFormat>
        <inlineHelpText>R1 staff should reference this ID when requesting Salesforce.com assistance from internal system support (e.g. Mike Lippman)</inlineHelpText>
        <label>Asset #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Asset_Legacy_ID__c</fullName>
        <label>Asset Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_in_Compiere__c</fullName>
        <inlineHelpText>For reference only, data imported from Compiere</inlineHelpText>
        <label>Invoice Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term (Yrs)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Products to Assets</description>
        <label>Converted Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustId__c</fullName>
        <inlineHelpText>ESi Customer ID</inlineHelpText>
        <label>CustId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_ID_from_Account__c</fullName>
        <formula>Account.ESi_Cust_ID__c</formula>
        <inlineHelpText>Auto-displayed from the Account associated to this product, for reference only.</inlineHelpText>
        <label>Cust ID (from Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_Not_Invoiced__c</fullName>
        <formula>IF (OR(Acctg_Override__c , ABS(Total_Amt_Invoiced__c) &gt;= ABS(Order_Amt__c)),0,
   IF (ABS( Recognized_Amt_3_Acctg__c ) &lt;= ABS(Order_Amt__c),
      (IF (ABS(Total_Amt_Invoiced__c) &gt; ABS(Recognized_Amt_3_Acctg__c), 0, Recognized_Amt_3_Acctg__c - Total_Amt_Invoiced__c)),
             Order_Amt__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set to 0 if Accounting Override is checked.
Otherwise set to Recognized Amt (Acctg) - Total Amt Invoiced</inlineHelpText>
        <label>Delivered/Not Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Demo_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If the license key will be for a trial, update number.</inlineHelpText>
        <label>Demo Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hosted Installation</fullName>
                </value>
                <value>
                    <fullName>Hybrid Installation</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Local Installation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalExpenseTotal__c</fullName>
        <label>Final/Paid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <formula>IF (Planned_Hours__c = 0, 0,  
     Order_Amt__c / Planned_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Order Amount / # of Planned Hours</inlineHelpText>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Partner__c</fullName>
        <formula>Purchase_Opportunity__r.Invoice_Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoice Partner from Purchase Opportunity (display only)</inlineHelpText>
        <label>Invoice Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced_Not_Delivered__c</fullName>
        <formula>IF (OR(Acctg_Override__c , Total_Amt_Invoiced__c = 0,  Delivered_Not_Invoiced__c &gt; 0 ),0,
    IF(ABS(Total_Amt_Invoiced__c) &gt; ABS( Recognized_Amt_3_Acctg__c ),
       Total_Amt_Invoiced__c - Recognized_Amt_3_Acctg__c,
       Recognized_Amt_3_Acctg__c - Total_Amt_Invoiced__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Recognized Amt (Acctg) - Total Amt Invoiced with some exceptions.
Set to 0 if Accounting Override is checked or Total Amt Invoiced is 0.</inlineHelpText>
        <label>Invoiced/Not Delivered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <formula>IF (ISBLANK (Line_Item_ID__c), 
 Name, 
 Line_Item_ID__c &amp; " " &amp; Name 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Purchased Item Name prefixed with Line ID from Sales Order, if converted from a sales order.</inlineHelpText>
        <label>Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Key__c</fullName>
        <inlineHelpText>Issue Key in Jira - used to integrate time tracking</inlineHelpText>
        <label>Jira Key</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source__c</fullName>
        <label>Legacy Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Format: [Proposal ID]-[Line Item ID]</inlineHelpText>
        <label>Line Item ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Purchased Items</relationshipLabel>
        <relationshipName>Purchased_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mx_Amount__c</fullName>
        <inlineHelpText>Maintenance amount</inlineHelpText>
        <label>Mx Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Amt__c</fullName>
        <label>Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_from_Master_Project__c</fullName>
        <formula>Master_Project__r.Owner:User.FirstName &amp;  " " &amp; Master_Project__r.Owner:User.LastName</formula>
        <inlineHelpText>Displays the Owner name from the associated Master Project</inlineHelpText>
        <label>PM (from Master Project)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Amount__c</fullName>
        <inlineHelpText>For services, budgeted dollar amount total for this line item</inlineHelpText>
        <label>Planned Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Hours__c</fullName>
        <inlineHelpText>For services, number of hours budgeted</inlineHelpText>
        <label>Planned Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Margin__c</fullName>
        <formula>Order_Amt__c  -  X3rd_Party_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated: Order Amount - 3rd Party Costs</inlineHelpText>
        <label>Planned Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>ProductName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>IMX Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tricia Nixon</fullName>
                </value>
                <value>
                    <fullName>PM 2</fullName>
                </value>
                <value>
                    <fullName>PM 3</fullName>
                </value>
                <value>
                    <fullName>PM 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_ID__c</fullName>
        <formula>Purchase_Opportunity__r.Proposal_ID__c</formula>
        <inlineHelpText>Proposal ID from the Closed Won Opportunity</inlineHelpText>
        <label>Proposal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assets converted from Opportunity Line Items should have a reference to the Purchase Opportunity.</description>
        <label>Purchase Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Purchased Items</relationshipLabel>
        <relationshipName>Purchased_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Oppty_ID__c</fullName>
        <formula>CASESAFEID(Purchase_Opportunity__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Oppty ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recognized_Amt_3_Acctg__c</fullName>
        <inlineHelpText>Updated by workflow - set to Order Amount if Status is Shipped, Completed or Active, or Accounting Override is checked. Otherwise, set to Recognized Amt (T&amp;E).</inlineHelpText>
        <label>Recognized Amt (Acctg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Amt_Acctg__c</fullName>
        <formula>IF ( Acctg_Override__c , 0,
(IF ( AND (ISPICKVAL (Product2.Family, "Travel &amp; Expense"),
OR (ISPICKVAL ( Status, "Completed"), ISPICKVAL ( Status, "Cancelled"))), 0,
IF (ABS(Total_Amt_Invoiced__c) &gt;= ABS( Order_Amt__c ), 0,
Order_Amt__c - Total_Amt_Invoiced__c)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Order Amount - Total Amount Invoiced. If item is a Travel Expense and marked Completed or Cancelled, set to 0.</inlineHelpText>
        <label>Remaining Amt (Acctg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal Opportunity Lookup - only to be used with Opportunity Renwals</description>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets (Renewal Opportunity)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amt_Invoiced__c</fullName>
        <inlineHelpText>Invoice Amount total from all related invoices</inlineHelpText>
        <label>Total Amt Invoiced</label>
        <summarizedField>Invoice__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice__c.Purchased_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unrealized_Revenue__c</fullName>
        <formula>IF (ISPICKVAL( Status , "Completed"),
IF( ABS( Recognized_Amt_3_Acctg__c ) &gt;= ABS(Order_Amt__c), 0,
Order_Amt__c - Total_Amt_Invoiced__c ),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Status is Completed or Acctg Override has been checked, set to Order Amount - Total Amount Invoiced.</inlineHelpText>
        <label>Unrealized Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Usage_End_Year__c</fullName>
        <formula>IF (ISNULL(UsageEndDate), "NO END DATE",
     TEXT(YEAR(UsageEndDate))
)</formula>
        <label>Usage End Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Costs__c</fullName>
        <inlineHelpText>3rd party or other costs that should be deducted to calculate planned margin</inlineHelpText>
        <label>3rd Party Costs</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>